Atualiza a API do Telegram e troca o karma por MozLove

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Mozilla Community Brazil",
-            "email": "comunidade@mozillabrasil.org.br"
+            "email": "webservices@mozillabrasil.org.br"
         }
     ],
     "minimum-stability": "stable",
